# chess

./: .gitignore  README  bishop.py  board.py  chess.py  constants.py  display_handler.py  displayer.py  engine_protocol.py  game.py  icons.py  king.py  knight.py  lib.py  main.py  move.py  move_generation_tests.py  pawn.py  piece.py  prof.py  queen.py  rook.py  run_tests.py  square.py  utests.py  utils.py
c_engine/: CMakeLists.txt  Makefile  bishop.cpp  bishop.h  board.cpp  board.h  constants.h  king.h  main.cpp  move.cpp  move.h  pawn.h  piece.cpp  piece.h  python_wrapper.cpp  queen.h  rook.h  square.cpp  square.h  test.cpp  utils.cpp  utils.h
c_engine/include/: bishop.h  board.h  constants.h  king.h  knight.h  move.h  pawn.h  piece.h  queen.h  rook.h  square.h  utils.h
c_engine/src/: bishop.cpp  board.cpp  constants.cpp  king.cpp  knight.cpp  move.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp  square.cpp  utils.cpp
c_engine/test/: run_tests.cpp  test_bishop.cpp  test_board.cpp  test_king.cpp  test_knight.cpp  test_move.cpp  test_pawn.cpp  test_queen.cpp  test_rook.cpp  test_square.cpp  test_tree_search.cpp  utest.h
ctests/: moves.py
unit_tests/: test_bishop.py  test_board.py  test_king.py  test_knight.py  test_legal_moves.py  test_move.py  test_pawn.py  test_queen.py  test_rook.py  test_square.py  test_utils.py  testing_utils.py
